--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!doctype html>
 <head>
     <meta charset="utf-8">
-
+    <script src="sylvester.js" type="text/javascript"></script>
+    <script src="glUtils.js" type="text/javascript"></script>
+    <script src="dds.js" type="text/javascript"></script>
     <script id="shader-fs" type="x-shader/x-fragment">
-    precision highp float;
-    uniform vec4 color;
+    varying highp vec2 vTextureCoord;
+
+    uniform sampler2D uSampler;
+
     void main() {
-        gl_FragColor = color;
+        gl_FragColor = texture2D(uSampler, vTextureCoord);
     }
     </script>
 
     <script id="shader-vs" type="x-shader/x-vertex">
-    attribute vec3 position;
+    attribute vec3 aPosition;
+    attribute vec2 aTextureCoord;
+
+    uniform mat4 uMVP;
+
+    varying highp vec2 vTextureCoord;
+
     void main() {
-        gl_Position = vec4(position, 1.0);
+        gl_Position = uMVP * vec4(aPosition, 1.0);
+        vTextureCoord = aTextureCoord;
     }
     </script>
 </head>
 <body>
-    <script src="index.js"></script>
+    <script src="index4.js"></script>
 </body>
 </html>
